// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas | <GifGrid /> Render  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Hunter
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas | <GifGrid /> Return informarcion 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Hunter
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="TITLE"
      url="https://"
    />
  </div>
</Fragment>
`;
